build/log/idf_py_stdout_output_18744
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Sotatek\espDev\Espressif\frameworks\esp-idf-v5.1\examples\get-started\project_ublox\build\bootloader\esp-idf\esptool_py && D:\Sotatek\espDev\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/get-started/project_ublox/build/bootloader/bootloader.bin"
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/8] Building C object esp-idf/lena_r8/CMakeFiles/__idf_lena_r8.dir/source/bee_Lena_r8.c.obj
FAILED: esp-idf/lena_r8/CMakeFiles/__idf_lena_r8.dir/source/bee_Lena_r8.c.obj 
ccache D:\Sotatek\espDev\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/get-started/project_ublox/build/config -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/get-started/project_ublox/library/lena_r8/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/newlib/platform_include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/include/freertos -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/arch/xtensa/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/soc -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/soc/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/port/esp32/. -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/port/esp32/private_include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/heap/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/log/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/soc/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/soc/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/soc/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/hal/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/hal/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/hal/platform_port/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/include/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_common/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_system/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_system/port/soc -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_system/port/include/private -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/xtensa/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/xtensa/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/include/apps -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/include/apps/sntp -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/lwip/src/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/freertos/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/esp32xx/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/esp32xx/include/arch -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/deprecated -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/analog_comparator/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/dac/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/gpio/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/gptimer/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/i2c/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/i2s/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/ledc/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/mcpwm/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/parlio/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/pcnt/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/rmt/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/sdio_slave/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/sdmmc/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/sigma_delta/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/spi/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/temperature_sensor/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/touch_sensor/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/twai/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/uart/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/usb_serial_jtag/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/touch_sensor/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_pm/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_ringbuf/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/get-started/project_ublox/library/sht3x_sensor_/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/get-started/project_ublox/library/cJson/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/get-started/project_ublox=. -fmacro-prefix-map=D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/lena_r8/CMakeFiles/__idf_lena_r8.dir/source/bee_Lena_r8.c.obj -MF esp-idf\lena_r8\CMakeFiles\__idf_lena_r8.dir\source\bee_Lena_r8.c.obj.d -o esp-idf/lena_r8/CMakeFiles/__idf_lena_r8.dir/source/bee_Lena_r8.c.obj -c D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/get-started/project_ublox/library/lena_r8/source/bee_Lena_r8.c
D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/get-started/project_ublox/library/lena_r8/source/bee_Lena_r8.c: In function 'mqtt_vCreate_content_message_json_data':
D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/get-started/project_ublox/library/lena_r8/source/bee_Lena_r8.c:56:43: error: '
   ' directive output truncated writing 2 bytes into a region of size 0 [-Werror=format-truncation=]
   56 |         snprintf(message_publish2, 14, "%s\r\n", "{\"name\":11111}");
      |                                           ^~~~
D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/get-started/project_ublox/library/lena_r8/source/bee_Lena_r8.c:56:9: note: 'snprintf' output 17 bytes into a destination of size 14
   56 |         snprintf(message_publish2, 14, "%s\r\n", "{\"name\":11111}");
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
